--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 <p>Year Up's mission is to close the Opportunity Divide by ensuring that young adults gain
     the skills, experiences, and support that will empower them to reach their potential
     through careers and higher education.</p>
-    
+
     <p>Year Up's job training program is tuition free, and offers access to today's 
         best companies and a proven path to career success.</p>
+
+        <img id="YU" src="yulogo.png" alt="yearup"/>
 
 <div>
     <form>
@@ -44,11 +46,13 @@
 
         <label for="fname">Enter Zip Code</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
-        <button-type="submit">Sign Up</button-type>
+        <a href="#">Sign Up</a>
     </form>
 </div>
+<div class="links">
+    <a href="https://www.yearup.org/">Click here For More Info</a>
+</div>
 
-<a href="https://www.yearup.org/">Click here For More Info</a>
 
 </body>
 </html>
